@@ -1,9 +1,9 @@
 #include "bigint.ih"
 
-BigInt::BigInt(BIGNUM const &bignum)
+BigInt::BigInt(BigInt const &other)
 :
     d_bn(BN_new())
 {
 //    BN_init(d_bn);
-    copy(d_bn, bignum);
+    copy(d_bn, *other.d_bn);
 }
