@@ -1,8 +1,0 @@
-#include "bigint.ih"
-
-BigInt::BigInt(BIGNUM const *bignum)
-:
-    d_bn(BN_new())
-{
-    copy(d_bn, *bignum);
-}
