@@ -1,4 +1,4 @@
-inline explicit BigInt::BigInt(BIGNUM *bignum)
+inline BigInt::BigInt(BIGNUM *bignum)
 :
     BigInt(const_cast<BIGNUM const *>(bignum))
 {}
