@@ -1,0 +1,7 @@
+#include "bigint.ih"
+
+BigInt &BigInt::operator=(BigInt &&tmp)
+{
+    swap(tmp);
+    return *this;
+}
