@@ -1,3 +1,5 @@
+  * Added the move constructor and the move assignment operator to BigInt
+
 bobcat (5.05.00)
 
   * Redefined FBB::binary_search, and updated its man-page
